# opencode-mlx-qwen-dflash

./: README.md  install.sh  patch_serve_py.py  pyproject.toml  qwen_tool_adapter.py  test_qwen_tool_adapter.py
docs/: 20260416-installation-notes.md
scripts/: bench.sh  coding_tests.py  oc.sh  start.sh
